Update package.json with test spec

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "dependencies": {
     "graceful-fs": "^4.1.11",
     "minimatch": "^3.0.4"
+  },
+  "scripts": {
+    "test": "gulp test"
   }
 }
