--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - "npm install"
   - "npm install bower -g"
   - "bower install"
+  - "gem install scss_lint"
 script:
   - gulp
   - gulp test
