--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.0",
     "jasmine-core": "^2.6.4",
     "jshint": "^2.9.5",
