--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "gulp-sass": "^3.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.0",
     "jasmine-core": "^2.6.4",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
-    "karma": "^1.7.0",
+    "karma": "^1.7.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "node-notifier": "^5.1.2",
