--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^6.1.2",
+    "gulp-cached": "^1.1.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
+    "gulp-debug": "^3.1.0",
     "gulp-eslint": "^4.0.0",
     "gulp-if": "^2.0.2",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
-    "gulp-karma": "0.0.5",
     "gulp-notify": "^3.0.0",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-plumber": "^1.1.0",
@@ -28,6 +30,7 @@
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.0",
