--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ajv": "^5.2.3",
     "bower": "^1.8.0",
     "browser-sync": "^2.18.12",
     "del": "^3.0.0",
+    "eslint-plugin-react": "^7.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^6.1.2",
+    "gulp-cache": "^0.4.6",
     "gulp-cached": "^1.1.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^4.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.4.0",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-plumber": "^1.1.0",
