--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gulp-notify": "^3.0.0",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-rev": "^8.0.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^3.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.0",
